# rad-peer-review-analytics

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  PROJECT_STATE.md  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEMO_MEDIA.md
scripts/: generate_demo_media.py
src/rad_peer_review_analytics/: __init__.py  analytics.py  cli.py  exporter.py  importer.py  models.py  scoring.py  synthetic.py
tests/: conftest.py  test_analytics.py  test_cli.py  test_exporter.py  test_importer.py  test_models.py  test_scoring.py  test_synthetic.py  test_version.py
