[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rad-peer-review-analytics"
version = "0.1.0"
description = "Radiology peer review tracking, scoring, and analytics CLI"
authors = [{ name = "Abinav Katuru", email = "akaturu@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
]
optional-dependencies = { dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.8"], media = ["Pillow>=10", "imageio>=2.34", "imageio-ffmpeg>=0.5", "numpy>=1.26"] }

[project.urls]
Homepage = "https://github.com/AKaturu/rad-peer-review-analytics"
Source = "https://github.com/AKaturu/rad-peer-review-analytics"

[project.scripts]
rad-peer-review-analytics = "rad_peer_review_analytics.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rad_peer_review_analytics = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.mypy]
strict = false
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --basetemp=.pytest-tmp"
